[package]
name = "css_dataset"
version = "0.2.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2021"
description = "CSS dataset about functions, properties, etc."
repository = "https://github.com/g-plane/css_dataset"
license = "MIT"
keywords = ["web", "css"]
categories = ["web-programming"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "vendor/css-functions/index.json",
    "vendor/css-properties/data/all.json",
    "vendor/svg-tags/lib/svg-tags.json",
    "vendor/properties-shorthand.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
once_cell = "1.18"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
