[package]
name = "css_dataset"
version = "0.4.1"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2021"
description = "CSS dataset about functions, properties, etc."
repository = "https://github.com/g-plane/css_dataset"
license = "MIT"
keywords = ["web", "css"]
categories = ["web-programming"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "vendor/css-functions/index.json",
    "vendor/css-properties/data/all.json",
]

[features]
default = [
    "css_functions",
    "css_properties",
    "css_at_rules",
    "autoprefixable",
    "media_features",
    "pseudo_classes",
    "pseudo_elements",
    "tags",
]
css_functions = []
css_properties = []
css_at_rules = []
autoprefixable = []
media_features = []
pseudo_classes = []
pseudo_elements = []
tags = []
